[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/wave_designer/node_designer/nodes/transforms/clamp_node.gd" type="Script" id=1]
[ext_resource path="res://ui/widgets/slider_slot.tscn" type="PackedScene" id=3]

[node name="Clamp" type="GraphNode"]
margin_right = 171.0
margin_bottom = 74.0
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = true
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = true
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = true
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
slot/5/left_enabled = true
slot/5/left_type = 0
slot/5/left_color = Color( 1, 1, 1, 1 )
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color( 1, 1, 1, 1 )
slot/6/left_enabled = true
slot/6/left_type = 0
slot/6/left_color = Color( 1, 1, 1, 1 )
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color( 1, 1, 1, 1 )
slot/7/left_enabled = true
slot/7/left_type = 0
slot/7/left_color = Color( 1, 1, 1, 1 )
slot/7/right_enabled = false
slot/7/right_type = 0
slot/7/right_color = Color( 1, 1, 1, 1 )
slot/8/left_enabled = true
slot/8/left_type = 0
slot/8/left_color = Color( 1, 1, 1, 1 )
slot/8/right_enabled = false
slot/8/right_type = 0
slot/8/right_color = Color( 1, 1, 1, 1 )
slot/9/left_enabled = true
slot/9/left_type = 0
slot/9/left_color = Color( 1, 1, 1, 1 )
slot/9/right_enabled = false
slot/9/right_type = 0
slot/9/right_color = Color( 1, 1, 1, 1 )
slot/10/left_enabled = false
slot/10/left_type = 0
slot/10/left_color = Color( 1, 1, 1, 1 )
slot/10/right_enabled = false
slot/10/right_type = 0
slot/10/right_color = Color( 1, 1, 1, 1 )
slot/11/left_enabled = false
slot/11/left_type = 0
slot/11/left_color = Color( 1, 1, 1, 1 )
slot/11/right_enabled = false
slot/11/right_type = 0
slot/11/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
base_title = "NODE_CLAMP_TITLE"

[node name="Output" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 245.0
margin_bottom = 38.0
hint_tooltip = "NODE_OUTPUT_PORT_TTIP"
mouse_filter = 1
text = "NODE_OUTPUT_PORT"
align = 2

[node name="Input" type="Label" parent="."]
margin_left = 16.0
margin_top = 39.0
margin_right = 245.0
margin_bottom = 53.0
hint_tooltip = "NODE_INPUT_PORT_TTIP"
mouse_filter = 1
text = "NODE_INPUT_PORT"

[node name="LevelHi" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 54.0
margin_right = 245.0
margin_bottom = 68.0
label = "NODE_LEVEL_HI_PORT"
tooltip = "NODE_LEVEL_HI_PORT_TTIP"
clamp_lo = false
clamp_hi = false

[node name="ClampHi" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 69.0
margin_right = 245.0
margin_bottom = 83.0
label = "NODE_CLAMP_HI_PORT"
tooltip = "NODE_CLAMP_HI_PORT_TTIP"
min_value = 0.0

[node name="LevelLo" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 84.0
margin_right = 245.0
margin_bottom = 98.0
label = "NODE_LEVEL_LO_PORT"
tooltip = "NODE_LEVEL_LO_PORT_TTIP"

[node name="ClampLo" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 99.0
margin_right = 245.0
margin_bottom = 113.0
label = "NODE_CLAMP_LO_PORT"
tooltip = "NODE_CLAMP_LO_PORT_TTIP"
min_value = 0.0

[node name="Amplitude" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 114.0
margin_right = 245.0
margin_bottom = 128.0
type = 2
label = "NODE_AMPLITUDE_PORT"
tooltip = "NODE_AMPLITUDE_PORT_TTIP"
value = 1.0
clamp_lo = false
clamp_hi = false

[node name="Power" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 129.0
margin_right = 245.0
margin_bottom = 143.0
type = 4
label = "NODE_POWER_PORT"
tooltip = "NODE_POWER_PORT_TTIP"
big_step = 100.0
huge_step = 500.0
min_value = 0.0
max_value = 500.0
value = 1.0
clamp_hi = false

[node name="Decay" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 144.0
margin_right = 245.0
margin_bottom = 158.0
type = 5
label = "NODE_DECAY_PORT"
tooltip = "NODE_DECAY_PORT_TTIP"
min_value = 0.0

[node name="DCOffset" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 159.0
margin_right = 245.0
margin_bottom = 173.0
type = 6
label = "NODE_DC_OFFSET_PORT"
tooltip = "NODE_DC_OFFSET_PORT_TTIP"
clamp_lo = false
clamp_hi = false

[node name="RangeFrom" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 174.0
margin_right = 245.0
margin_bottom = 188.0
type = 7
label = "NODE_RANGE_FROM_PORT"
tooltip = "NODE_RANGE_FROM_PORT_TTIP"

[node name="RangeLength" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 189.0
margin_right = 245.0
margin_bottom = 203.0
type = 8
label = "NODE_RANGE_LEN_PORT"
tooltip = "NODE_RANGE_LEN_PORT_TTIP"
min_value = 0.0
value = 1.0

[connection signal="value_changed" from="LevelHi" to="." method="_on_LevelHi_value_changed"]
[connection signal="value_changed" from="ClampHi" to="." method="_on_ClampHi_value_changed"]
[connection signal="value_changed" from="LevelLo" to="." method="_on_LevelLo_value_changed"]
[connection signal="value_changed" from="ClampLo" to="." method="_on_ClampLo_value_changed"]
[connection signal="value_changed" from="Amplitude" to="." method="_on_Amplitude_value_changed"]
[connection signal="value_changed" from="Power" to="." method="_on_Power_value_changed"]
[connection signal="value_changed" from="Decay" to="." method="_on_Decay_value_changed"]
[connection signal="value_changed" from="DCOffset" to="." method="_on_DCOffset_value_changed"]
[connection signal="value_changed" from="RangeFrom" to="." method="_on_RangeFrom_value_changed"]
[connection signal="value_changed" from="RangeLength" to="." method="_on_RangeLength_value_changed"]
